# ComfyUI-UTFCN

./: LICENSE  README.md  __init__.py  mappings.json  popular_node_signatures.json  pyproject.toml  user_mappings.json  utfcn_core.py
docs/superpowers/plans/: 2026-07-02-popular-node-signatures.md
docs/superpowers/specs/: 2026-07-02-popular-node-signatures-design.md
tests/: test_generate_popular_node_signatures.py  test_utfcn_core_generated.py  utfcn_widget_transfer.test.mjs
tools/: __init__.py  generate_popular_node_signatures.py
web/: utfcn.js  utfcn_widget_transfer.js
